# agent-team-studio

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
apps/desktop/: index.html  package.json  tsconfig.test.json  vite.config.ts
apps/desktop/src/: App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: AppShell.tsx  ChatTranscript.tsx  ConversationStream.tsx  ConversationWorkspace.tsx  MarkdownPreview.tsx  ProjectConversationSidebar.tsx  RightInspector.tsx  SettingsView.tsx  Sidebar.tsx  TopBar.tsx  icons.tsx
apps/desktop/src/lib/: agentVisuals.ts  conversationEventBus.ts  conversations.ts  desktopApi.ts  mentions.ts  participantViewModels.ts  sampleData.ts  turnStatus.ts  userVisibleThreadItems.ts
apps/desktop/src/pages/: index.tsx
apps/desktop/tests/: conversations.test.mjs  mentions.test.mjs  participantViewModels.test.mjs  turnStatus.test.mjs  userVisibleThreadItems.test.mjs
docs/: phase-00-ui-cleanup-audit.md
