[package]
name = "agent-team-studio"
version = "0.1.0"
description = "Agent Team Studio"
authors = ["Agent Team Studio"]
edition = "2021"

[lib]
name = "agent_team_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "agent-team-studio"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
